[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/3DModels/EmeraldRing.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Classes/EmeraldRingRender.gd" type="Script" id=2]
[ext_resource path="res://Assets/3DModels/EmeraldRingWorld.tres" type="Environment" id=3]

[sub_resource type="World" id=1]
environment = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 243, 176 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14, 41 )

[node name="EmeraldRingIn2D" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="3DVisual" type="Viewport" parent="ViewportContainer"]
size = Vector2( 128, 128 )
own_world = true
world = SubResource( 1 )
transparent_bg = true
handle_input_locally = false
msaa = 1
keep_3d_linear = true
render_target_update_mode = 3

[node name="EmeraldRing" parent="ViewportContainer/3DVisual" instance=ExtResource( 1 )]

[node name="ActivateTrigger" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="ActivateTrigger"]
shape = SubResource( 2 )

[node name="Enter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enter"]
shape = SubResource( 3 )
[connection signal="body_entered" from="ActivateTrigger" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="ActivateTrigger" to="." method="_on_Area2D_body_exited"]
